--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "mongodb": "^5.5.0",
+    "mongoose": "^7.2.3",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
