API and Schema Creation

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 YOUTUBE_KEY=AIzaSyBEFOHMqersnIKAOqbuZDAEZYAah_sI5hQ
-MONGODB_URI=mongodb+srv://admin:psOyf2CZIda9Iwsl@cluster0.cybisei.mongodb.net/
+MONGODB_URI=mongodb+srv://admin:psOyf2CZIda9Iwsl@cluster0.cybisei.mongodb.net/capstone
